--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: go
 
 go:
   - 1.7
+  - 1.8
 
-go_import_path: go.delic.rs/ligno
+go_import_path: github.com/delicb/ligno
 
 script:
   - go test -race -coverprofile=coverage.txt -covermode=atomic
